FusionDev Backup1/src/objects/Invoice_Lines__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ext_Price__c</fullName>
        <label>Ext Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Change_Time__c</fullName>
        <label>Last Change Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Quantity__c</fullName>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing_Line__c</fullName>
        <label>Packing Line</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing_Slip__c</fullName>
        <label>Packing Slip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <label>Sales Order</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Target</label>
        <referenceTo>Sales_Target__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UPC__c</fullName>
        <label>UPC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice Lines</label>
    <nameField>
        <label>Invoice Lines Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>